--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
-    "manifest_version": 2,
-    "name": "Accueil Personnalisé",
-    "version": "1.0",
-    "description": "Une page d'accueil dynamique pour afficher les favoris.",
-    "permissions": [
-      "bookmarks",
-      "storage",
-      "tabs"
-    ],
-    "chrome_url_overrides": {
-      "newtab": "index.html"
-    },
-    "browser_action": {
-      "default_popup": "index.html"
-    }
-  }
+  "manifest_version": 2,
+  "name": "Accueil Personnalisé",
+  "version": "1.0",
+  "description": "Une page d'accueil dynamique pour afficher les favoris.",
+  "permissions": [
+    "bookmarks"
+  ],
+  "chrome_url_overrides": {
+    "newtab": "index.html"
+  },
+  "browser_action": {
+    "default_popup": "index.html"
+  },
+  "web_accessible_resources": [
+    "images/*.jpeg"
+  ]
+}
