--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,12 @@
   "permissions": [
     "bookmarks"
   ],
+  
   "chrome_url_overrides": {
-    "newtab": "index.html"
+    "newtab": "app/index.html"
   },
   "browser_action": {
-    "default_popup": "index.html"
+    "default_popup": "app/index.html"
   },
   "web_accessible_resources": [
     "images/*.jpeg"
