--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,10 @@
   "chrome_url_overrides": {
     "newtab": "app/index.html"
   },
-  "browser_action": {
-    "default_popup": "app/index.html"
-  },
   "web_accessible_resources": [
-    "images/*.jpeg"
+    {
+      "resources": ["images/*.jpeg"],
+      "matches": ["<all_urls>"]
+  }
   ]
 }
